[package]
name = "kolbold"
version = "1.0.0"
edition = "2021"

[dependencies]
# Logging
tracing = { version = "0.1.40" }

# SerDe
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.9.0"

# Sync
rayon = "1.10.0"

# Async
tokio = { version = "1.32.0", features = ["full"] }
async-trait = "0.1.73"
tokio-tungstenite = { version = "0.14", features = ["rustls-tls"] }
futures = "0.3.31"

# Errors
anyhow = { version = "1.0", default-features = false }
thiserror = "1.0.64"

# Authentication
sha2 = "0.10.8"
hex = "0.4.3"
uuid = { version = "1.11.0", features = ["v4","fast-rng","macro-diagnostics"] }
ring = "0.17.8"

# Utrils
chrono = { version = "0.4.31", features = ["serde"] }
smol_str = { version = "0.2", features = ["serde"] }
rust_decimal = {version = "1.35.0", features = ["serde"]}
rand = "0.8.5"
rustc-hash = "2.0.0"

# Testing
tokio-test = "0.4"
sysinfo = "0.32.0"
num_cpus = "1.16.0"