[package]
name = "kolbold"
version = "1.1.1"
edition = "2021"
authors = ["Nikola Kolev <nikolakolev712@gmail.com>"]
description = "A Rust library for memory and time metrics collection."
license = "Apache-2.0"
repository = "https://github.com/Darkeyes712/kolbold"
documentation = "https://docs.rs/kolbold"

[dependencies]
kolbold_core = "0.1.0"  
kolbold_macros = "0.1.0"
