[package]
name = "kolbold_macros"
version = "0.1.0"
edition = "2021"
authors = ["Nikola Kolev <nikolakolev712@gmail.com>"]
description = "A Rust library for memory and time metrics collection."
license = "Apache-2.0"
repository = "https://github.com/Darkeyes712/kolbold"
documentation = "https://docs.rs/kolbold"

[lib]
proc-macro = true

[dependencies]
# Marcro
syn = "2.0.87"
quote = "1.0.37"

